<resources>
    <string name="app_name">Carputer</string>

    <!--  Activity Titles - used in AndroidManifest.xml and menu/drawer_view.xml -->
    <string name="activity_title_carputer">Carputer</string>
    <string name="activity_title_camera">Camera - mjpeg</string>
    <string name="activity_title_camera_motioneye">Camera - motionEye</string>
    <string name="activity_title_camera_image_archive">Image Archive</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_settings_new">Settings</string>
    <string name="activity_title_carputer_mgmt">Carputer Management</string>
    <string name="activity_title_about">About</string>

    <!--  Dialog Titles -->
    <string name="fragment_system_status">System Status</string>

    <!--  Draw Layout -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!--  Toolbar -->
    <string name="action_snapshot">Snapshot</string>
    <string name="action_device_delete">Delete</string>
    <string name="action_system_log_clear">Clear</string>
    <string name="action_system_log_refresh">Refresh</string>
    <string name="action_clear_console">Clear console</string>
    <string name="action_go_back">Go back</string>

    <!--  Tab Layout Titles -->
    <string name="tab_camera_file_explorer">Snapshots</string>
    <string name="tab_carputer_mgmt_ssh">SSH</string>
    <string name="tab_carputer_mgmt_phpsysinfo">phpSysInfo</string>
    <string name="tab_carputer_mgmt_system_log">System Log</string>
    <string name="tab_camera_image_archive_web_view">Image Archive</string>

    <!--  Image Archive -->
    <string name="alert_title_delete_files">Confirm Delete…</string>
    <string name="alert_message_confirm_delete">Are you sure you want delete this file?</string>
    <string name="alert_positive_button">YES</string>
    <string name="alert_negative_button">NO</string>

    <!-- Widgets -->
    <string name="btn_carputer_mgmt_ssh_poweroff_single">Power Off (Single)</string>
    <string name="btn_carputer_mgmt_ssh_poweroff_all">Power Off (All)</string>
    <string name="btn_carputer_mgmt_ssh_ping">Ping</string>
    <string name="btn_carputer_mgmt_ssh_sync_date_single">Sync Date (Single)</string>
    <string name="btn_carputer_mgmt_ssh_sync_date_all">Sync Date (All)</string>
    <string name="btn_carputer_mgmt_execute_command">Execute Command</string>
    <string name="btn_carputer_mgmt_system_status">System Status</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_not_enabled">......</string>

    <string name="lbl_camera_details">Camera Details</string>
    <string name="lbl_camera_name">Camera Name*</string>
    <string name="lbl_camera_url">Camera Url*</string>
    <string name="lbl_use_authentication">Use Authentication</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_required_field">* Field is required</string>
    <string name="lbl_node_details">Node Details</string>
    <string name="lbl_node_name">Node Name*</string>
    <string name="lbl_node_ip">Node Ip*</string>
    <string name="lbl_node_ssh_port">SSH Port</string>
    <string name="lbl_node_use_phpsysinfo">Use phpSysInfo</string>
    <string name="lbl_node_phpsysinfo_url">phpSysInfo Url</string>
    <string name="lbl_node_use_motioneye">Use motionEye</string>
    <string name="lbl_node_motioneye_url">motionEye Url</string>

    <string name="image_view_content_description_stream">Streaming Video</string>


    <!-- Shared Preference Settings -->
    <!--  Preference Category -->
    <string name="pref_category_cameras">Camera\'s</string>
    <string name="pref_category_cameras_configured">Camera\'s Configured</string>
    <string name="pref_category_camera_add">Add Camera</string>
    <string name="pref_category_nodes">Node\'s</string>
    <string name="pref_category_nodes_configured">Node\'s Configured</string>
    <string name="pref_category_nodes_add">Add Node</string>
    <string name="pref_category_network_settings">Network Settings</string>
    <string name="pref_category_misc_settings">Misc</string>

    <!--  Preference Titles -->
    <string name="pref_title_activity_settings">Settings</string>
    <string name="pref_title_camera_settings">Camera Settings</string>
    <string name="pref_title_camera_add">Add Camera</string>
    <string name="pref_title_node_settings">Node Settings</string>
    <string name="pref_title_node_add">Add Node</string>
    <string name="pref_title_network_name">Network SSID</string>
    <string name="pref_title_network_password">Network Passphrase</string>
    <string name="pref_title_network_auto_connect">Auto connect</string>
    <string name="pref_title_misc_keep_device_awake">Keep Device Awake</string>
    <string name="pref_title_image_archive_url">Image Archive Url</string>

    <!--  Default Shared Preference Values -->
    <string name="pref_default_camera_name">Front</string>
    <string name="pref_default_camera_url">http://192.168.4.1:8081</string>
    <string name="pref_default_node_name">Front</string>
    <string name="pref_default_node_ip">192.168.4.1</string>
    <string name="pref_default_node_ssh_port">22</string>
    <string name="pref_default_node_motioneye_url">http://192.168.4.1:8765</string>
    <string name="pref_default_node_physysinfo_url">http://192.168.4.1/phpsysinfo</string>
    <string name="pref_default_network_name">PINET</string>
    <string name="pref_default_network_password">scoobydoo</string>
    <string name="pref_default_image_archive_url">http://192.168.4.1/image_archive</string>

    <!--  Logging messages -->
    <string name="msg_application_starting">Application starting&#8230;</string>

    <string name="msg_network_connecting_now">Network is enabled.  Connecting now&#8230;</string>
    <string name="msg_network_connected_date_sync">Network connection made.  Syncing date&#8230;</string>
    <string name="msg_network_connection_fail">Unable to connect to network.</string>
    <string name="msg_network_connection_success">Successfully connected to network.</string>
    <string name="msg_network_connected_to">Network connected to:\t</string>
    <string name="msg_network_connection_dropped">Network connection dropped.</string>

    <string name="msg_keep_device_awake">Flag set to keep device awake.</string>

    <string name="msg_sync_date_all_nodes">Syncing date on all nodes&#8230;</string>
    <string name="msg_sync_date_single_node">Syncing date on node:&#032;</string>
    <string name="msg_sync_date_already_performed">Date already synced.</string>

    <string name="msg_power_off_all_nodes">Shutting down all nodes, goodbye.</string>
    <string name="msg_power_off_single_node">Shutting down node:&#032;</string>

    <string name="msg_ping_results">Ping results.</string>
    <string name="msg_executing_ping">Executing Ping&#8230;</string>

    <string name="msg_execute_command_results">Executing command results:\t</string>
    <string name="msg_executing_command">Executing command&#8230;\t</string>
    <string name="msg_on_node">&#032;on node:\t</string>
    <string name="msg_node_info">Retrieving date and firmware version.</string>

    <string name="msg_task_already_canceled">Task already cancelled.</string>
    <string name="msg_task_results">&#032;task results:</string>
    <string name="msg_no_task_results">&#032;task did not produce any results.</string>
    <string name="msg_task_exception">&#032;exception results:</string>
    <string name="msg_no_task_exception">&#032;task did not produce any exceptions.</string>
    <string name="msg_task_finished">Task finished.</string>
    <string name="msg_task_timeout">Task has timed out.</string>
    <string name="msg_task_cancelled">Task cancelled.</string>

    <string name="msg_camera_disconnected">DISCONNECTED</string>
    <string name="msg_camera_connection_progress">CONNECTION_PROGRESS</string>
    <string name="msg_camera_connected">CONNECTED</string>
    <string name="msg_camera_connection_error">CONNECTION_ERROR</string>
    <string name="msg_camera_stopping_progress">STOPPING_PROGRESS</string>

    <!--  About -->
    <string name="version">Version</string>

    <!--  Exceptions -->
    <string name="exception_tag">Exception</string>
    <string name="exception_no_free_space">The path has no free space available.</string>
    <string name="exception_file_write_failed">File write failed:</string>
    <string name="exception_file_not_found">File not found:</string>
    <string name="exception_cannot_read_file">Cannot read file:</string>

    <!--  Toast messages -->
    <string name="toast_image_saved">Image has been saved.</string>
    <string name="toast_camera_connection_error">Camera connection error!</string>
    <string name="toast_file_delete_ok">You file has been deleted!</string>
    <string name="toast_file_delete_cancel">You file has NOT been deleted!</string>
    <string name="toast_system_log_clear">System log has been cleared.</string>
    <string name="toast_system_log_refresh">System log has been refreshed.</string>

</resources>
