<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_title_camera_settings"
        app:icon="@drawable/ic_baseline_camera_front_24px" >

        <Preference
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_CAMERAS"
            app:title="@string/pref_category_cameras"
            app:fragment="com.billdoerr.android.carputer.settings.SettingsActivity$SettingsFragmentCameras"
            app:useSimpleSummaryProvider="true" >
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_title_node_settings"
        app:icon="@drawable/ic_raspberry_pi_24px" >

        <Preference
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NODES"
            app:title="@string/pref_category_nodes"
            app:fragment="com.billdoerr.android.carputer.settings.SettingsActivity$SettingsFragmentNodes"
            app:useSimpleSummaryProvider="true" >
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_network_settings"
        app:icon="@drawable/ic_baseline_network_wifi_24px" >

        <SwitchPreference
            app:enabled="true"
            app:defaultValue="false"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NETWORK_ENABLED"
            app:title="@string/pref_title_network_auto_connect"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NETWORK_ENABLED"
            app:defaultValue="@string/pref_default_network_name"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NETWORK_NAME"
            app:singleLine="true"
            app:title="@string/pref_title_network_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NETWORK_ENABLED"
            app:defaultValue="@string/pref_default_network_password"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_NETWORK_PASSPHRASE"
            app:singleLine="true"
            app:title="@string/pref_title_network_password"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_category_misc_settings" >

        <SwitchPreference
            app:enabled="true"
            app:defaultValue="false"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_KEY_KEEP_DEVICE_AWAKE"
            app:title="@string/pref_title_misc_keep_device_awake"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:enabled="true"
            app:defaultValue="true"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_ENABLE_BOTTOM_NAVIGATION"
            app:title="@string/pref_title_enable_bottom_navigation"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/pref_default_image_archive_url"
            app:key="com.billdoerr.android.carputer.settings.SettingsActivity.PREF_IMAGE_ARCHIVE_URL"
            app:singleLine="true"
            app:title="@string/pref_title_image_archive_url"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>