<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/activity_title_camera" />
        <item
            android:id="@+id/nav_motioneye"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/activity_title_camera_motioneye" />
        <item
            android:id="@+id/nav_image_archive"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/activity_title_camera_image_archive" />

        <item
            android:id="@+id/nav_management"
            android:icon="@android:drawable/picture_frame"
            android:title="@string/activity_title_carputer_mgmt" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/activity_title_settings" />
    </group>

</menu>