<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_settings_node_detail.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Scroll list -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollIndicators="none|right"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <!-- Node Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingBottom="10dp">

            <TextView
                style="@style/PreferenceCategoryTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/lbl_node_details"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@id/txt_node_name"
                android:text="@string/lbl_node_name" />

            <EditText
                android:id="@+id/txt_node_name"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/lbl_node_name_required_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_required_field"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@id/txt_node_ip"
                android:text="@string/lbl_node_ip" />

            <EditText
                android:id="@+id/txt_node_ip"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/lbl_node_ip_required_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_required_field"
                android:textColor="@color/design_default_color_error"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:labelFor="@id/txt_node_ssh_port"
                android:text="@string/lbl_node_ssh_port" />

            <EditText
                android:id="@+id/txt_node_ssh_port"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <Switch
                android:id="@+id/switch_use_authentication"
                style="@style/PreferenceCategoryTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_use_authentication"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/txt_username"
                android:text="@string/lbl_username" />

            <EditText
                android:id="@+id/txt_username"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/txt_password"
                android:text="@string/lbl_password" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <Switch
                android:id="@+id/switch_node_use_motioneye"
                style="@style/PreferenceCategoryTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_node_use_motioneye"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/txt_node_motioneye_url"
                android:text="@string/lbl_node_motioneye_url" />

            <EditText
                android:id="@+id/txt_node_motioneye_url"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <Switch
                android:id="@+id/switch_node_use_phpsysinfo"
                style="@style/PreferenceCategoryTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lbl_node_use_phpsysinfo"
                tools:ignore="PrivateResource" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/txt_node_phpsysinfo_url"
                android:text="@string/lbl_node_phpsysinfo_url" />

            <EditText
                android:id="@+id/txt_node_phpsysinfo_url"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/lbl_required_field"
                android:textColor="@color/design_default_color_error"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

    <!-- Save/Cancel/Delete buttons -->
    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonPrefCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonPrefSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save" />

    </LinearLayout>

</RelativeLayout>