<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_settings_name_detail.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Node Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/layout_buttons">

        <!-- Scroll list -->
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollIndicators="none|right"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical">

            <!-- Node Details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
                android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                android:paddingRight="?android:attr/listPreferredItemPaddingRight"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/lbl_camera_details"
                    style="@style/PreferenceCategoryTitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/lbl_camera_details" />

                <TextView
                    android:id="@+id/lbl_camera_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:labelFor="@id/txt_camera_name"
                    android:text="@string/lbl_camera_name" />

                <EditText
                    android:id="@+id/txt_camera_name"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/lbl_camera_name_required_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_required_field"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lbl_camera_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:labelFor="@id/txt_camera_url"
                    android:text="@string/lbl_camera_url" />

                <EditText
                    android:id="@+id/txt_camera_url"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/lbl_camera_url_required_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/lbl_required_field"
                    android:textColor="@color/design_default_color_error"
                    android:visibility="gone" />

                <Switch
                    android:id="@+id/switch_use_authentication"
                    style="@style/PreferenceCategoryTitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/lbl_use_authentication" />

                <TextView
                    android:id="@+id/lbl_username"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/txt_username"
                    android:text="@string/lbl_username" />

                <EditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/lbl_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:labelFor="@id/txt_password"
                    android:text="@string/lbl_password" />

                <EditText
                    android:id="@+id/txt_password"
                    style="@style/EditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/lbl_required_field"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="12sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!-- Save/Cancel/Delete buttons -->
    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingRight="?android:attr/listPreferredItemPaddingRight">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/ButtonPrefCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonPrefSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textSize="12sp" />

    </LinearLayout>

</RelativeLayout>
